--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 # https://learnxinyminutes.com/docs/yaml/
 
 title: fastpages
-description: An easy to use blogging platform with support for Jupyter Notebooks.
+description: Fast and YI
 github_username: tobias-fyi
 # you can comment the below line out if your repo name is not different than your baseurl
 github_repo: "fastfyi"
@@ -42,8 +42,8 @@ permalink: /:categories/:title
 # Github and twitter are optional:
 minima:
   social_links:
-    twitter: fastdotai
-    github: fastai
+    twitter: tobiasfyi
+    github: tobias-fyi
 
 # Set this to true to get LaTeX math equation support
 use_math: 
@@ -52,7 +52,7 @@ use_math:
 show_description: true
 
 # Set this to true to display image previews on home page, if they exist
-show_image: false
+show_image: true
 
 # Set this to true to turn on annotations with hypothes.is (https://web.hypothes.is/)
 annotations: false
