--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 # https://learnxinyminutes.com/docs/yaml/
 
 title: tobias.fyi
-description: Tobias' little slice of internet.
+description: Tobias Reaper
 github_username: tobias-fyi
 # you can comment the below line out if your repo name is not different than your baseurl
 github_repo: "fastfyi"
